# Kanban

./: .gitignore  CMakeLists.txt  README.md  kanban.db  main.cpp  main.qml  qml.qrc  user_data.json  user_data_example.json
include/: mainSingleton.h  task.h  taskListModel.h  taskStrategy.h  user.h
lib/: mainSingleton.cpp  taskListModel.cpp  taskStrategy.cpp
resources/: DialogChecker.js  KanbanPage.qml  LoginPage.qml  TaskInsertDialog.qml  TaskListView.qml  TasksPage.qml  TextFieldWithWarning.qml
